--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@huggingface/inference": "^1.8.0",
+    "@microsoft/fetch-event-source": "^2.0.1",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@supabase/supabase-js": "^2.23.0",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
+    "langchain": "^0.0.84",
     "lucide-react": "0.105.0-alpha.4",
     "next": "^13.3.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.6.0",
     "react-dom": "^18.2.0",
+    "server-only": "^0.0.1",
     "sharp": "^0.31.3",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5"
