--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@radix-ui/react-separator": "^1.0.3",
     "@supabase/supabase-js": "^2.23.0",
+    "@vercel/analytics": "^1.0.1",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
